--- a/.github/workflows/github-actions-test.yml
+++ b/.github/workflows/github-actions-test.yml
@@ -1,6 +1,3 @@
-# This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-nodejs
-
 name: React.js CI
 
 on:
@@ -10,18 +7,29 @@ on:
     branches: [ "main" ]
 
 jobs:
-  build:
+  build-and-lint:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        node-version: [22.x]
-        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
-
     steps:
-    - uses: actions/checkout@v4
-    - name: use bun
-      uses: oven-sh/setup-bun@v2
-      with:
-        bun-version: latest
-    - run: bun ci
-    - run: bun run build --if-present
+      - name: Checkout du code
+        uses: actions/checkout@v3
+
+      - name: Installer Bun
+        uses: oven-sh/setup-bun@v2
+        with:
+          bun-version: latest # Ou spécifie une version précise
+
+      - name: Installer les dépendances
+        run: bun ci
+
+      - name: Linter le code
+        run: bun run lint  # Adapte la commande si nécessaire
+
+      - name: Construire l'application
+        run: bun run build # Adapte la commande si nécessaire
+
+      - name: Déployer sur GitHub Pages
+        if: github.ref == 'refs/heads/main' # Déployer uniquement depuis la branche main
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./build
