--- a/.github/workflows/github-actions-test.yml
+++ b/.github/workflows/github-actions-test.yml
@@ -3,7 +3,7 @@ name: React.js CI
 on:
   push:
     branches:
-      - '*'
+      - "*"
   pull_request:
     branches: [ "main" ]
 
@@ -34,6 +34,6 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./dist
-
-      - name: Afficher le contenu du répertoire courant
-        run: ls -la
+          permissions:
+          deployments: write
+          contents: write
