--- a/.github/workflows/github-actions-test.yml
+++ b/.github/workflows/github-actions-test.yml
@@ -10,6 +10,8 @@ on:
 jobs:
   build-and-lint:
     runs-on: ubuntu-latest
+    permissions:
+          contents: write
     steps:
       - name: Checkout du code
         uses: actions/checkout@v3
